--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/nodemailer": "^6.4.16",
     "@types/react-icons": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
