--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@types/react-icons": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
