--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/nodemailer": "^6.4.16",
     "@types/react-icons": "^3.0.0",
@@ -32,6 +34,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "react": "^18",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
