--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "html2pdf.js": "^0.9.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
