--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "validator": "^13.12.0",
+    "xendit-node": "^6.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -58,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
