--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.2.15",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -23,6 +24,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@types/nodemailer": "^6.4.16",
     "@types/react-icons": "^3.0.0",
     "@types/recharts": "^1.8.29",
@@ -37,7 +39,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
-    "next-nprogress-bar": "^2.3.13",
+    "next-nprogress-bar": "^2.3.14",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "react": "^18",
