--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
